# summit_mind

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  pyproject.toml  start_server.py
client/: .firebaserc  app.js  index.html  prewritten_meetings.js  style.css
server/: index.py  take_two.py
summit_mind/serving/: generate_summary.py  generate_summary_onnx.py
summit_mind/training/: evaluate_model.py  export_to_onnx.py  finetune_samsum.py  save_final_model.py  tune.py  tune_newest.py
