[project]
name = "summit-mind"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob MacInnis"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "datasets",
    "scikit-learn",
    "tf-keras (>=2.19.0,<3.0.0)",
    "py7zr (>=0.22.0,<0.23.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "transformers (>=4.40.0,<5.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "onnxruntime (>=1.21.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
